--- a/A2/requirements.txt
+++ b/A2/requirements.txt
@@ -1,4 +1,5 @@
 asttokens==2.4.1
+attrs==24.2.0
 colorama==0.4.6
 comm==0.2.2
 contourpy==1.3.0
@@ -6,15 +7,19 @@ cycler==0.12.1
 debugpy==1.8.7
 decorator==5.1.1
 executing==2.1.0
+fastjsonschema==2.20.0
 fonttools==4.54.1
 ipykernel==6.29.5
 ipython==8.29.0
 jedi==0.19.1
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 kiwisolver==1.4.7
 matplotlib==3.9.2
 matplotlib-inline==0.1.7
+nbformat==5.10.4
 nest-asyncio==1.6.0
 networkx==3.4.2
 numpy==2.1.2
@@ -34,6 +39,8 @@ python-dateutil==2.9.0.post0
 pytz==2024.2
 pywin32==308
 pyzmq==26.2.0
+referencing==0.35.1
+rpds-py==0.20.0
 scipy==1.14.1
 six==1.16.0
 stack-data==0.6.3
